--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -4,7 +4,7 @@ author: "Anna Berman"
 date: "June 12, 2016"
 output: html_document
 ---
-```{r global_options, include=TRUE}
+```{r global_options, include=FALSE}
 knitr::opts_chunk$set(fig.width=12, fig.height=8, fig.path='Figs/', echo=TRUE, warning=FALSE, message=FALSE)
 ```
 
